@@ -82,6 +82,10 @@ try_compile(
 	PQXX_HAVE_THREAD_LOCAL
 	${PROJECT_BINARY_DIR}
 	SOURCES ${PROJECT_SOURCE_DIR}/config-tests/thread_local.cxx)
+try_compile(
+	PQXX_HAVE_SLEEP_FOR
+	${PROJECT_BINARY_DIR}
+	SOURCES ${PROJECT_SOURCE_DIR}/config-tests/sleep_for.cxx)
 
 # check_cxx_source_compiles requires CMAKE_REQUIRED_DEFINITIONS to specify
 # compiling arguments.
