@@ -12,6 +12,7 @@ PQXX_HAVE_GCC_PURE	public	compiler
 PQXX_HAVE_GCC_VISIBILITY	public	compiler
 PQXX_HAVE_POLL       internal        compiler
 PQXX_HAVE_PQENCRYPTPASSWORDCONN	internal	libpq
+PQXX_HAVE_SLEEP_FOR	internal	compiler
 PQXX_HAVE_SPAN	public	compiler
-PQXX_HAVE_THREAD_LOCAL       private        compiler
+PQXX_HAVE_THREAD_LOCAL       internal        compiler
 VERSION	internal	autotools
