@@ -59,7 +59,7 @@ void test_004()
     PQXX_CHECK_EQUAL(notifs, 0, "Got unexpected notifications.");
     // Sleep for one second.  I'm not proud of this, but how does one inject
     // a change to the built-in clock in a static language?
-    std::this_thread::sleep_for(std::chrono::seconds(1));
+    pqxx::internal::wait_for(1'000'000u);
     notifs = conn.get_notifs();
   }
 
