@@ -51,7 +51,7 @@ void test_receive(
 
   int notifs{0};
   for (int i{0}; (i < 10) and (notifs == 0);
-       ++i, std::this_thread::sleep_for(std::chrono::seconds(i)))
+       ++i, pqxx::internal::wait_for(1'000'000u))
     notifs = conn.get_notifs();
 
   PQXX_CHECK_EQUAL(notifs, 1, "Got wrong number of notifications.");
